# AI-Driven-Smart-Attendance-Management

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  attendance_taker.py  get_faces_from_camera_tkinter.py  keys.py  main.py
templates/: index.html
